@startuml

title __WORKFLOWS's Class Diagram__\n

  namespace de.tuberlin.dima.bdapro.dataIntegration.sensor {
    namespace workflows {
      class de.tuberlin.dima.bdapro.dataIntegration.sensor.workflows.SensorFeatureTableGeneration {
          {static} - FIELD_TYPES : TypeInformation[]
          {static} - compressed : boolean
          {static} + aggregateSensorData()
          {static} + aggregateSensorData()
          {static} + generateFeatureTable()
          {static} + main()
          {static} + storeAggregatedSensorData()
          {static} - getAggregationFieldNames()
          {static} - getAggregationFieldTypes()
          {static} - getFeatureColumns()
      }
    }
  }
  

  namespace de.tuberlin.dima.bdapro.dataIntegration.sensor {
    namespace workflows {
      class de.tuberlin.dima.bdapro.dataIntegration.sensor.workflows.SensorFiltering {
          {static} - filterBasePath : String
          {static} - filteredSensorDataPath : String
          {static} - rawSensorDataPath : String
          {static} + getFilteredSensor()
          {static} + getFilteredSensors()
          {static} + main()
          {static} - cacheFilteredSensorData()
          {static} - filterSensor()
          {static} - filterSensorData()
          {static} - readAcceptedSensors()
      }
    }
  }
  

  namespace de.tuberlin.dima.bdapro.dataIntegration.sensor {
    namespace workflows {
      class de.tuberlin.dima.bdapro.dataIntegration.sensor.workflows.SensorStatistics {
          {static} - basePath : String
          {static} + main()
          {static} ~ collectStatistics()
          {static} - calculateStatistics()
      }
    }
  }
  

  namespace de.tuberlin.dima.bdapro.dataIntegration.sensor {
    namespace workflows {
      abstract class de.tuberlin.dima.bdapro.dataIntegration.sensor.workflows.UnifiedSensorWorkflow {
          {static} # sensorPatterns : Map<Type, String>
          {static} # getSensorPattern()
          {static} # readAllSensors()
          {static} # readSensor()
          {static} # readSensor()
          {static} # unionAll()
      }
    }
  }
  

  de.tuberlin.dima.bdapro.dataIntegration.sensor.workflows.SensorFeatureTableGeneration -up-|> de.tuberlin.dima.bdapro.dataIntegration.sensor.workflows.UnifiedSensorWorkflow
  de.tuberlin.dima.bdapro.dataIntegration.sensor.workflows.SensorFiltering -up-|> de.tuberlin.dima.bdapro.dataIntegration.sensor.workflows.UnifiedSensorWorkflow
  de.tuberlin.dima.bdapro.dataIntegration.sensor.workflows.SensorStatistics -up-|> de.tuberlin.dima.bdapro.dataIntegration.sensor.workflows.UnifiedSensorWorkflow


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
